--- a/public/style.css
+++ b/public/style.css
@@ -659,6 +659,11 @@ textarea {
 .message-field textarea {
     max-height: 150px;
 }
+.message-length,
+.note-length {
+    color: var(--color-gray-dark);
+    font-size: 0.8em;
+}
 .next img {
     box-shadow: 10px 10px 25px var(--color-gray);
 }
@@ -751,13 +756,25 @@ textarea {
 .user-list .user-item:last-child {
     border-bottom: 0 none;
 }
-.user-list .user-item.notes > span {
+.user-list .user-item.notes .user-column {
     flex: 2;
     display: flex;
+    flex-direction: column;
     align-items: center;
     height: 3em;
-    justify-content: left;
+    justify-content: space-around;
     margin: 0;
+}
+@media screen and (min-width: 1000px) {
+    .user-list .user-item.notes .user-column {
+        padding: 0;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+}
+.user-list .user-item.notes .user-data {
+    display: flex;
+    align-items: center;
 }
 .user-list .user-item.notes > input {
     flex: 3;
