Add maintenance feature

--- a/templates/bundles/TwigBundle/Exception/error404.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error404.html.twig
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="content error-page">
         <div class="is-center">
-            <h2>Error 404</h2>
+            <h2>Error 404 - Not found</h2>
 
             <p>Ho ho ho! The page could not be found.</p>
 
