Explain the app works with odd number of participants

--- a/templates/content/faq.html.twig
+++ b/templates/content/faq.html.twig
@@ -100,6 +100,15 @@
                         </ol>
                         <p>And that's it, you are done!</p>
                     </li>
+                    <li id="odd">
+                        <h3>
+                            <a href="#odd">Will the app work with an odd number of participant?</a>
+                        </h3>
+                        <p>
+                            Don't worry! The draw works perfectly no matter how many participants
+                            you selected (of course we need a minimum of 2 participants 😉).
+                        </p>
+                    </li>
                     <li id="avoid-association">
                         <h3>
                             <a href="#avoid-association">Can I make sure someone will be matched or not matched with someone else?</a>
@@ -129,14 +138,14 @@
                         </p>
                         <p>
                             When your team is really big, Slack, Discord or Zoom.us APIs can fail to send us all the users in a
-                            reasonable duration. That means you will no be able to start a Secret Santa. A
-                            possible workaround would be to create a new Slack workspace / Discord server / Zoom.us Chat
+                            reasonable duration. That means you will not be able to start a Secret Santa.
+                            A possible workaround would be to create a new Slack workspace / Discord server / Zoom.us Chat
                             with only the participants.
                         </p>
                         <p>
                             The second step is to dispatch a private message to all the selected users. Even if you started
                             a Secret Santa with a lot of participants, the application will send all the messages progressively.
-                            So there should not be any at this step.
+                            So there should not be any problem at this step.
                         </p>
                     </li>
                 </ul>
