Add a Warning pre-auth page for Zoom users #142

--- a/templates/content/homepage.html.twig
+++ b/templates/content/homepage.html.twig
@@ -23,7 +23,7 @@
                     <a class="action hvr-buzz action-discord" href="{{ path('run', { application: 'discord' }) }}">
                         <i class="custom-fa-discord"></i> Run on Discord
                     </a>
-                    <a class="action hvr-buzz action-zoom" href="{{ path('run', { application: 'zoom' }) }}">
+                    <a class="action hvr-buzz action-zoom" href="{{ path('zoom_pre_auth_warning') }}">
                         <i class="custom-fa-zoom"></i> Run on Zoom
                         <sup style="position:absolute;top:8px;right:4px;font-size: 0.6em;">beta</sup>
                     </a>
