--- a/templates/santa/pre_auth_warning.html.twig
+++ b/templates/santa/pre_auth_warning.html.twig
@@ -16,7 +16,7 @@
             </p>
         </div>
     </div>
-    <div class="jumbotron" style="padding-bottom: 0;">
+    <div class="jumbotron" style="padding: 20px 0;">
         <div class="jumbotron-inner">
             <a class="action hvr-buzz action-zoom" href="{{ path('run', { application: 'zoom' }) }}">
                 <i class="custom-fa-zoom"></i> Run on Zoom anyway!
