--- a/templates/content/faq.html.twig
+++ b/templates/content/faq.html.twig
@@ -124,7 +124,7 @@
                         </h3>
                         <p>
                             No, you can't. However, you can still start a new Secret Santa. We advice you to add a note in the
-                            message mentioning that this new draw cancel and replace the old one.
+                            message mentioning that this new draw cancels and replaces the old one.
                         </p>
                     </li>
                     <li id="big-team">
