docs: fix typos

--- a/templates/content/faq.html.twig
+++ b/templates/content/faq.html.twig
@@ -25,7 +25,7 @@
                             Nothing 😚
                         </p>
                         <p>
-                            <strong>Detailled answer</strong>:
+                            <strong>Detailed answer</strong>:
                             We receive only the data mandatory to start the Secret Santa:
                             the list of users and usergroups in your organization.
                             Everything will be forgotten automatically after you finished the draw!
